testcases/error-cases/syntax-error-01/error.txt
error[E0001]: expected expression after '='
 --> input.canon:3:14
  |
2 |     name = "test"
3 |     version = // missing value - syntax error
  |              ^ expected an expression here
4 | }
  |
  = note: assignment expressions require a value on the right side
  = help: try providing a value like: version = "some_value"
